# server/app/Http/Resources/Api/V1/SupplierSummaryResource.php
@@ -1,0 +1,22 @@
+<?php
+
+namespace App\Http\Resources\Api\V1;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class SupplierSummaryResource extends JsonResource
+{
+    /**
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            /** @format uuid */
+            'id' => $this->id,
+
+            'name' => $this->name,
+        ];
+    }
+}
